# mcp-audio-server

./: LICENSE  README.md  pyproject.toml
src/mcp_audio_server/: __init__.py  client.py  enums.py  server.py  settings.py
